...
            <Text style={styles.category}>{campaign.category.name}</Text>
          </TextLink>
        )}
      </View>

      <View style={styles.titleBlock}>
        <Text accessibilityRole="header" style={styles.title} testID="campaign-title">
          {campaign.title}
        </Text>
        {campaign.blurb === null ? null : <Body tone="reading">{campaign.blurb}</Body>}
      </View>

      {/*
...
