import{n as e}from"./rolldown-runtime-DkW27tQK.js";import{n as t,p as n}from"./iframe-uNOmdSrI.js";import{t as r}from"./react-dom-DdsuZ2De.js";import{n as i,t as a}from"./cn-Dm4OyE3Q.js";import{n as o,t as s}from"./dist-CAbKXD0Y.js";import{n as c,t as l}from"./x-Ca8Yd1sd.js";import{n as u,t as d}from"./IconButton-Cevg8XGE.js";import{n as f,t as p}from"./Pill-yyzVFUGb.js";import{n as m,t as h}from"
  render: args => {
    const [open, setOpen] = useState(false);
    return <>
        <Pill onClick={() => setOpen(true)}>Open modal</Pill>
        <Modal {...args} open={open} onOpenChange={setOpen} description="You are only charged if the project reaches its goal." footer={<>
              <Pill variant="ghost" onClick={() => setOpen(false)}>
...
